--- a/style.css
+++ b/style.css
@@ -43,12 +43,12 @@ a:hover {
 }
 
 main {
-  max-width: 800px;   
+  max-width: 900px;   
   background: #fff;
   margin: 0px auto 0px; 
   box-shadow: 1px 1px 2px #DAD7D7;
   border-radius: 3px;  
-  padding: 3em;
+  padding: 2.5em;
   margin-top: 2em;
 }
 
@@ -94,6 +94,7 @@ section {
 
 .company-desc {
   font-size: 0.7rem;
+  line-height: 0.9rem;
   color: #3ba1dc;    
 }
 
@@ -113,10 +114,11 @@ section {
   }
   
   .section__title {
+    font-size: 1rem;
     letter-spacing: 0.07em;
     color: #54AFE4;
     font-weight: bold;
-    margin-bottom: 0.3em;
+    margin-bottom: 0.4em;
     text-transform: uppercase;
   }
   
@@ -136,12 +138,12 @@ section {
   
   .left {
     width: 22%;
-    margin-right: 1em;    
+    margin-right: 0.5em;    
   }
   
   .right {
     text-align: left;
-    width: 74%;
+    width: 76%;
   }
 
   .lower-left {
@@ -161,6 +163,10 @@ section {
   .name {
     font-weight: bold;
   }
+
+  .company-name {
+    font-weight: bold;
+  }
   
   .skills {
     display: grid;
@@ -178,24 +184,132 @@ section {
     display: none;
   }
 
+  .skills-print {
+    display: none;
+  }
+
     label {
       display: absolute;
       width: 15px;
       height: 15px;
-      background: #C3DEF3;
+      background: #a0c3de;
       border-radius: 20px;
       margin-right: 0.2em;
     }
     
     input:checked + label {
-      background: #79A9CE;
+      background: #4388bc;
     }
 
     @media print {
     body {
       min-width: initial !important;
+      background: rgb(255, 255, 255);
+      width: 109%;
     }
-    .btn-print {
+
+    section {
+      margin-bottom: 1em;  
+    }
+
+    section:last-of-type {
+      margin-bottom: -1em;  
+    }
+
+    main {
+      max-width: 1300px;  
+      padding: 1em;
+      box-shadow: 0 0 0;
+
+      margin: 1em 0.5em;
+    }
+
+    .page-end {
+      height: 10em;
+    }
+
+    .page-spacer {
+      padding: 1.1em 0;
+    }
+
+    .skills-print {
+      display: block;
+    }
+
+    .section-col {
       display: none;
     }
+
+    .print {
+      display: none;
+    }
+
+    .skills {
+      grid-template-columns: 0.6fr 0.9fr 1fr;
+      gap: 0.5em 0.5em;
+    }
+
+  }
+
+  @media (max-width: 540px) {
+    
+    main {
+    max-width: 90%;
+    padding: 3em 1.5em 1.5em 1.5em; 
+    }
+
+    .left {
+      width: 100%;
+      margin-bottom: 0.6em;
+    }
+
+    .right {
+      width: 100%;
+    }
+
+    .name {
+
+    }
+
+    .company-name {
+      font-size: 1rem;
+      font-weight: bold;
+    }
+
+    .company-desc {
+      color: #4b4b4b;
+    }
+
+    .duration {
+      color: #3ba1dc;
+    }
+
+    .addr {
+      color: #3ba1dc;      
+    }
+
+    .mobile {
+      display: none;
+    }
+
+    .section__title {
+      font-size: 1.1rem;
+      margin: 2.5em 0 1em 0;
+      text-decoration: underline;
+    }
+
+    .skills {
+      grid-template-columns: 1fr 1fr;
+      gap: 1em;
+    }
+    
+  }
+
+  @media (max-width: 850px) {
+    
+    main {
+    max-width: 90%;
+    padding: 3em 1.5em 1.5em 1.5em; 
+    }
+
   }
